# synerty-peek

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitlab-release-branch.yml  .readthedocs.yaml  LICENSE.rst  README.md  README.rst  build_docs.sh  build_lin_platform_release.sh  build_synerty_peek_docs.sh  build_win_platform_release.ps1  deploy_nativescript_app_win.ps1  deploy_platform_deb8.sh  deploy_platform_macos.sh  deploy_platform_win.ps1  deploy_win_platform_release.ps1  deploy_win_playform_release.ps1  git_all.sh  git_clean.sh  git_clone.sh  git_compare_master.sh  git_pull_all.sh  git_push_all.sh  git_push_github.sh  git_rebase_all.sh  npm_all.sh  npm_web.sh  package.sh  package_nativescript_app_win.ps1  package_platform_deb8.sh  package_platform_macos.sh  package_platform_win.ps1  peek_all.sh  pip_common.sh  pip_uninstall_all.sh  pip_uninstall_and_develop.sh  pip_uninstall_and_develop_plugins.sh  pip_uninstall_peek_all.sh  pipbuild.sh  (+16 more)
dev_scripts/: generate_fe_overlays.sh  git_all.sh  git_check_branch.sh  git_check_sync.py  git_compare_master.sh  git_optimize.sh  git_pull_all.sh  git_push_all.sh  git_push_github.sh  git_rebase_all.sh  npm_all.sh  peek_all.sh  pip_uninstall_all.sh  setup-gitlab-fork.py  update_config_jsons_for_dev.py
docs/: AdministerPeekPlatform.rst  DebianAndroidSetup.rst  DebianNativescriptSetup.rst  DebianRequirementsSetup.rst  DeployNativescriptApp.rst  DeployPeekPlatform.rst  DeployPeekPlugin.rst  DevelopPeekPlatform.rst  DevelopPeekPlugin.rst  DevelopmentSetup.rst  DevelopmentSetupDebian.rst  DevelopmentSetupWindows.rst  Dockerfile  Installation.rst  NativescriptSetupWindows.rst  PackagePeekPlatform.rst  PackagePeekPlugin.rst  PlatformBuildRelease.rst  PlatformDevelopmentSetup.rst  PlatformReleasePackaging.rst  PluginBuildRelease.rst  PluginDevelopmentSetup.rst  ProductionSetup.rst  ProductionSetupDebian.rst  ProductionSetupWindows.rst  PublishPeekPlugin.rst  README.rst  RequirementsWindows.rst  Requirements_Debian.rst  Requirements_Windows.rst  SetupOSRequirementsDebian.rst  SetupOSRequirementsWindows.rst  TODO.txt  Troubleshooting.rst  TroubleshootingWindows.rst  (+13 more)
(+439 files in other folders)
